--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -32,6 +32,7 @@
 	<link rel="stylesheet" href="/assets/website/css/clashnodesfree/jquery.mCustomScrollbar.min.css">
 	<!-- Tweaks for older IEs-->
 	<link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
+	<link rel="stylesheet" href="/assets/website/css/G.css" />
 	<!-- fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;800&family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
 
@@ -112,6 +113,51 @@
             </div>
             <div class="row">
                 <div class="col-md-9 xcblog-blog-list">
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-31">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-3-31-free-high-speed-nodes.htm" title="VPN网关 | 3月31日20M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/2c41239ac39028609af4b6e4c787f732.webp" alt="VPN网关 | 3月31日20M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-3-31-free-high-speed-nodes.htm" title="VPN网关 | 3月31日20M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月31日20M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了日本、美国、加拿大、韩国、香港、新加坡、欧洲等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-30">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-3-30-free-node-subscribe.htm" title="VPN网关 | 3月30日22.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/c8ff7aedac806fecb30cb33ee55b8cc1.webp" alt="VPN网关 | 3月30日22.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-3-30-free-node-subscribe.htm" title="VPN网关 | 3月30日22.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月30日22.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了香港、韩国、美国、日本、加拿大、欧洲、新加坡等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-29">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-3-29-free-node-subscribe.htm" title="VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/35cd59f6c9e33127c228b8be79274267.webp" alt="VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-3-29-free-node-subscribe.htm" title="VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了韩国、日本、香港、加拿大、新加坡、欧洲、美国等地区,最高速度可达20.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
                                         <div class="row item xcblog-blog-item" data-date="2025-03-28">
                         <div class="col-md-3">
                             <div class="about_img">
@@ -217,51 +263,6 @@
                             <p class="about_text">这一次的节点更新覆盖了美国、新加坡、韩国、日本、加拿大、香港、欧洲等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-21">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-21-node-share-links.htm" title="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/8eb9d9933ff3b2e0f7201530e522e98c.webp" alt="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-21-node-share-links.htm" title="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了美国、韩国、新加坡、香港、加拿大、欧洲、日本等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-20">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-20-free-subscribe-node.htm" title="VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/818f2f93dcbeed0252bc858caff32aed.webp" alt="VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-20-free-subscribe-node.htm" title="VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了加拿大、日本、韩国、美国、香港、欧洲、新加坡等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-19">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-19-free-subscribe-node.htm" title="VPN网关 | 3月19日22.7M/S|免费V2ray/SSR/Shadowrocket/Clash订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/6e0666170b743f277ea390817dbb58e7.webp" alt="VPN网关 | 3月19日22.7M/S|免费V2ray/SSR/Shadowrocket/Clash订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-19-free-subscribe-node.htm" title="VPN网关 | 3月19日22.7M/S|免费V2ray/SSR/Shadowrocket/Clash订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月19日22.7M/S|免费V2ray/SSR/Shadowrocket/Clash订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了加拿大、欧洲、韩国、香港、美国、日本、新加坡等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
                                         
                     <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>                </div>
                 <div class="col-md-3">
@@ -271,16 +272,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-9-node-share-links.htm" title="VPN网关 | 3月9日18.1M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点">VPN网关 | 3月9日18.1M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-4-node-share-links.htm" title="VPN网关 | 4月4日22.3M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点">VPN网关 | 4月4日22.3M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-76899.htm" title="动物疫苗是什么单位负责的 动物疫苗是什么单位负责的呢">动物疫苗是什么单位负责的 动物疫苗是什么单位负责的呢</a></li>
-                        <li class="py-2"><a href="/news/article-88864.htm" title="宠物领养数据库设计 宠物领养数据库设计方案">宠物领养数据库设计 宠物领养数据库设计方案</a></li>
-                        <li class="py-2"><a href="/news/article-83124.htm" title="深圳宠物领养中心电话地址 深圳宠物领养中心电话地址查询">深圳宠物领养中心电话地址 深圳宠物领养中心电话地址查询</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-2-clash-v2ray-ss-ssr.htm" title="VPN网关 | 4月2日22.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点">VPN网关 | 4月2日22.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-79646.htm" title="宠物之家托运怎么收费（宠物托运咨询哪里）">宠物之家托运怎么收费（宠物托运咨询哪里）</a></li>
-                        <li class="py-2"><a href="/news/article-72217.htm" title="动物接种疫苗后多久产生抗体?（动物疫苗间隔时间）">动物接种疫苗后多久产生抗体?（动物疫苗间隔时间）</a></li>
-                        <li class="py-2"><a href="/news/article-91856.htm" title="RestTemplate连接https，证书匹配失败">RestTemplate连接https，证书匹配失败</a></li>
-                        <li class="py-2"><a href="/news/article-77585.htm" title="宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）">宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）</a></li>
+                        <li class="py-2"><a href="/news/article-90367.htm" title="济南宠物狗免费赠送活动（济南宠物狗免费赠送活动是真的吗）">济南宠物狗免费赠送活动（济南宠物狗免费赠送活动是真的吗）</a></li>
+                        <li class="py-2"><a href="/news/article-81710.htm" title="动物疫苗gmp认证（动物疫苗gmp认证查询）">动物疫苗gmp认证（动物疫苗gmp认证查询）</a></li>
+                        <li class="py-2"><a href="/news/article-76220.htm" title="python中脚本怎么执行sql语句？">python中脚本怎么执行sql语句？</a></li>
+                        <li class="py-2"><a href="/news/article-100759.htm" title="合肥哪里可以领养猫（合肥在哪领养猫）">合肥哪里可以领养猫（合肥在哪领养猫）</a></li>
+                        <li class="py-2"><a href="/news/article-94853.htm" title="动物疫苗的作用原理和方法图片 动物疫苗的作用原理和方法图片大全">动物疫苗的作用原理和方法图片 动物疫苗的作用原理和方法图片大全</a></li>
+                        <li class="py-2"><a href="/news/article-102214.htm" title="宠物领养平台论文摘要写什么内容好（宠物领养系统的开题报告）">宠物领养平台论文摘要写什么内容好（宠物领养系统的开题报告）</a></li>
+                        <li class="py-2"><a href="/news/article-86701.htm" title="Android Studio之菜单栏制作">Android Studio之菜单栏制作</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-11-node-share-links.htm" title="VPN网关 | 4月11日21.2M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点">VPN网关 | 4月11日21.2M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-18-free-node-subscribe.htm" title="VPN网关 | 3月18日19.9M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点">VPN网关 | 3月18日19.9M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-88144.htm" title="webpack 执行npm run 时，因为版本依赖报的那些错">webpack 执行npm run 时，因为版本依赖报的那些错</a></li>
                     </ul>
     </div>
 </div>
@@ -292,7 +293,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">55</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">66</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
