--- a/about-us.htm
+++ b/about-us.htm
@@ -35,6 +35,7 @@
 	<link rel="stylesheet" href="/assets/website/css/clashnodesfree/jquery.mCustomScrollbar.min.css">
 	<!-- Tweaks for older IEs-->
 	<link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
+	<link rel="stylesheet" href="/assets/website/css/G.css" />
 	<!-- fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;800&family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
 
@@ -127,16 +128,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-78292.htm" title="宠物猫疫苗多少钱一个针头（宠物猫接种疫苗多少钱）">宠物猫疫苗多少钱一个针头（宠物猫接种疫苗多少钱）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-5-free-v2ray-subscribe.htm" title="VPN网关 | 4月5日19M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点">VPN网关 | 4月5日19M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-73540.htm" title="三国杀新品武将（三国杀新品武将推荐）">三国杀新品武将（三国杀新品武将推荐）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-28-free-high-speed-nodes.htm" title="VPN网关 | 3月28日20.5M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点">VPN网关 | 3月28日20.5M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-71559.htm" title="动物疫苗间隔时间多久打一次好（动物疫苗的使用方法及注意事项）">动物疫苗间隔时间多久打一次好（动物疫苗的使用方法及注意事项）</a></li>
-                        <li class="py-2"><a href="/news/article-86701.htm" title="Android Studio之菜单栏制作">Android Studio之菜单栏制作</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-13-clash-v2ray-ss-ssr.htm" title="VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-14-free-v2ray.htm" title="VPN网关 | 3月14日18.3M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">VPN网关 | 3月14日18.3M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-83124.htm" title="深圳宠物领养中心电话地址 深圳宠物领养中心电话地址查询">深圳宠物领养中心电话地址 深圳宠物领养中心电话地址查询</a></li>
-                        <li class="py-2"><a href="/news/article-89597.htm" title="Amazing巧用 CSS 视差实现酷炫交互动效详解">Amazing巧用 CSS 视差实现酷炫交互动效详解</a></li>
+                        <li class="py-2"><a href="/news/article-76220.htm" title="python中脚本怎么执行sql语句？">python中脚本怎么执行sql语句？</a></li>
+                        <li class="py-2"><a href="/news/article-72881.htm" title="动物疫苗哪个好 动物疫苗品牌">动物疫苗哪个好 动物疫苗品牌</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-19-free-v2ray-subscribe.htm" title="VPN网关 | 4月19日18.9M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点">VPN网关 | 4月19日18.9M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-71558.htm" title="宠物粮代理怎么拿（宠物粮代理加盟）">宠物粮代理怎么拿（宠物粮代理加盟）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-22-free-node-subscribe.htm" title="VPN网关 | 3月22日18.4M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">VPN网关 | 3月22日18.4M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-8-free-v2ray.htm" title="VPN网关 | 4月8日21.6M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点">VPN网关 | 4月8日21.6M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-91857.htm" title="啥属相不能养狗（哪个属相不能养狗）">啥属相不能养狗（哪个属相不能养狗）</a></li>
+                        <li class="py-2"><a href="/news/article-76900.htm" title="宠物粮食专卖店在哪里进货（宠物粮食专卖店在哪里进货好）">宠物粮食专卖店在哪里进货（宠物粮食专卖店在哪里进货好）</a></li>
+                        <li class="py-2"><a href="/news/article-97024.htm" title="动物打防疫针（动物打防疫针运输）">动物打防疫针（动物打防疫针运输）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-11-node-share-links.htm" title="VPN网关 | 3月11日18.2M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点">VPN网关 | 3月11日18.2M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点</a></li>
                     </ul>
     </div>
 </div>
@@ -148,7 +149,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">55</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">66</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
