--- a/date/2025-03/page-3.htm
+++ b/date/2025-03/page-3.htm
@@ -35,6 +35,7 @@
 	<link rel="stylesheet" href="/assets/website/css/clashnodesfree/jquery.mCustomScrollbar.min.css">
 	<!-- Tweaks for older IEs-->
 	<link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
+	<link rel="stylesheet" href="/assets/website/css/G.css" />
 	<!-- fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;800&family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
 
@@ -274,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-81046.htm" title="宠爱国际宠物医院官网 宠物医院十大品牌加盟">宠爱国际宠物医院官网 宠物医院十大品牌加盟</a></li>
-                        <li class="py-2"><a href="/news/article-82404.htm" title="狗粮加工厂利润成本分析图表（狗粮加工厂需要什么手续）">狗粮加工厂利润成本分析图表（狗粮加工厂需要什么手续）</a></li>
+                        <li class="py-2"><a href="/news/article-100050.htm" title="宠物店卖猫需要什么资质（宠物店卖猫需要什么资质呢）">宠物店卖猫需要什么资质（宠物店卖猫需要什么资质呢）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-6-free-v2ray-subscribe.htm" title="VPN网关 | 4月6日21.5M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点">VPN网关 | 4月6日21.5M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-95590.htm" title="最新免费领养边牧 最新免费领养边牧视频">最新免费领养边牧 最新免费领养边牧视频</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-12-free-v2ray-subscribe.htm" title="VPN网关 | 4月12日18.2M/S|免费Clash/SSR/V2ray/Shadowrocket订阅节点">VPN网关 | 4月12日18.2M/S|免费Clash/SSR/V2ray/Shadowrocket订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-71559.htm" title="动物疫苗间隔时间多久打一次好（动物疫苗的使用方法及注意事项）">动物疫苗间隔时间多久打一次好（动物疫苗的使用方法及注意事项）</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-4-5-free-v2ray-subscribe.htm" title="VPN网关 | 4月5日19M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点">VPN网关 | 4月5日19M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-26-free-node-subscribe-links.htm" title="VPN网关 | 3月26日21.1M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点">VPN网关 | 3月26日21.1M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-92571.htm" title="宠物粮食店名称大全四个字怎么取（宠物粮创意名字）">宠物粮食店名称大全四个字怎么取（宠物粮创意名字）</a></li>
-                        <li class="py-2"><a href="/news/article-92572.htm" title="卖猫的市场（卖猫的市场视频）">卖猫的市场（卖猫的市场视频）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-13-clash-v2ray-ss-ssr.htm" title="VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-85992.htm" title="动物疫苗法律法规有哪些要求 动物疫苗法律法规有哪些要求呢">动物疫苗法律法规有哪些要求 动物疫苗法律法规有哪些要求呢</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-18-free-node-subscribe.htm" title="VPN网关 | 3月18日19.9M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点">VPN网关 | 3月18日19.9M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-70891.htm" title="动物医院诊疗许可证办理流程图片大全视频（动物医院诊疗程序）">动物医院诊疗许可证办理流程图片大全视频（动物医院诊疗程序）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-22-clash-v2ray-ss-ssr.htm" title="VPN网关 | 4月22日18.4M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点">VPN网关 | 4月22日18.4M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-11-node-share-links.htm" title="VPN网关 | 4月11日21.2M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点">VPN网关 | 4月11日21.2M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-90367.htm" title="济南宠物狗免费赠送活动（济南宠物狗免费赠送活动是真的吗）">济南宠物狗免费赠送活动（济南宠物狗免费赠送活动是真的吗）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-28-free-high-speed-nodes.htm" title="VPN网关 | 3月28日20.5M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点">VPN网关 | 3月28日20.5M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点</a></li>
                     </ul>
     </div>
 </div>
@@ -295,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">55</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">66</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
