--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -35,6 +35,7 @@
 	<link rel="stylesheet" href="/assets/website/css/clashnodesfree/jquery.mCustomScrollbar.min.css">
 	<!-- Tweaks for older IEs-->
 	<link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
+	<link rel="stylesheet" href="/assets/website/css/G.css" />
 	<!-- fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;800&family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
 
@@ -141,16 +142,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-77586.htm" title="宠物狗批发网站大全（宠物狗批发价格）">宠物狗批发网站大全（宠物狗批发价格）</a></li>
-                        <li class="py-2"><a href="/news/article-88865.htm" title="宠物领养平台有哪几个品牌名称好（宠物领养平台有哪几个品牌名称好听点）">宠物领养平台有哪几个品牌名称好（宠物领养平台有哪几个品牌名称好听点）</a></li>
-                        <li class="py-2"><a href="/news/article-96343.htm" title="男生衣服牌子排行榜(男生衣服品牌大全)">男生衣服牌子排行榜(男生衣服品牌大全)</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-16-node-share-links.htm" title="VPN网关 | 3月16日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点">VPN网关 | 3月16日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-77585.htm" title="宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）">宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-19-free-subscribe-node.htm" title="VPN网关 | 3月19日22.7M/S|免费V2ray/SSR/Shadowrocket/Clash订阅节点">VPN网关 | 3月19日22.7M/S|免费V2ray/SSR/Shadowrocket/Clash订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-20-node-share-links.htm" title="VPN网关 | 4月20日21.8M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点">VPN网关 | 4月20日21.8M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-96342.htm" title="小猫养多久才知道自己的名字了（幼猫养多久能知道主人叫它）">小猫养多久才知道自己的名字了（幼猫养多久能知道主人叫它）</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-3-20-free-subscribe-node.htm" title="VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点">VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-94278.htm" title="我被猫咬了一下25天了没打针但心跳加速正常吗（被猫咬后心跳加速）">我被猫咬了一下25天了没打针但心跳加速正常吗（被猫咬后心跳加速）</a></li>
-                        <li class="py-2"><a href="/news/article-76900.htm" title="宠物粮食专卖店在哪里进货（宠物粮食专卖店在哪里进货好）">宠物粮食专卖店在哪里进货（宠物粮食专卖店在哪里进货好）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-9-node-share-links.htm" title="VPN网关 | 4月9日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">VPN网关 | 4月9日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-89597.htm" title="Amazing巧用 CSS 视差实现酷炫交互动效详解">Amazing巧用 CSS 视差实现酷炫交互动效详解</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-17-free-node-subscribe-links.htm" title="VPN网关 | 4月17日22.1M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点">VPN网关 | 4月17日22.1M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-11-node-share-links.htm" title="VPN网关 | 4月11日21.2M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点">VPN网关 | 4月11日21.2M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-86701.htm" title="Android Studio之菜单栏制作">Android Studio之菜单栏制作</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-24-free-high-speed-nodes.htm" title="VPN网关 | 3月24日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket订阅节点">VPN网关 | 3月24日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-12-free-node-subscribe-links.htm" title="VPN网关 | 3月12日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点">VPN网关 | 3月12日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-16-node-share-links.htm" title="VPN网关 | 3月16日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点">VPN网关 | 3月16日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点</a></li>
                     </ul>
     </div>
 </div>
@@ -162,7 +163,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">55</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">66</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
