--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -32,6 +32,7 @@
 	<link rel="stylesheet" href="/assets/website/css/clashnodesfree/jquery.mCustomScrollbar.min.css">
 	<!-- Tweaks for older IEs-->
 	<link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
+	<link rel="stylesheet" href="/assets/website/css/G.css" />
 	<!-- fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;800&family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
 
@@ -112,6 +113,51 @@
             </div>
             <div class="row">
                 <div class="col-md-9 xcblog-blog-list">
+                                        <div class="row item xcblog-blog-item" data-date="2025-04-23">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-4-23-free-v2ray.htm" title="VPN网关 | 4月23日20.5M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/6e0666170b743f277ea390817dbb58e7.webp" alt="VPN网关 | 4月23日20.5M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-4-23-free-v2ray.htm" title="VPN网关 | 4月23日20.5M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 4月23日20.5M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了香港、加拿大、日本、美国、新加坡、欧洲、韩国等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-04-22">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-4-22-clash-v2ray-ss-ssr.htm" title="VPN网关 | 4月22日18.4M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/818f2f93dcbeed0252bc858caff32aed.webp" alt="VPN网关 | 4月22日18.4M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-4-22-clash-v2ray-ss-ssr.htm" title="VPN网关 | 4月22日18.4M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 4月22日18.4M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了欧洲、新加坡、日本、香港、美国、加拿大、韩国等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-04-20">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-4-20-node-share-links.htm" title="VPN网关 | 4月20日21.8M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/c8ff7aedac806fecb30cb33ee55b8cc1.webp" alt="VPN网关 | 4月20日21.8M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-4-20-node-share-links.htm" title="VPN网关 | 4月20日21.8M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 4月20日21.8M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了香港、美国、加拿大、欧洲、韩国、日本、新加坡等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
                                         <div class="row item xcblog-blog-item" data-date="2025-04-19">
                         <div class="col-md-3">
                             <div class="about_img">
@@ -217,51 +263,6 @@
                             <p class="about_text">这一次的节点更新覆盖了日本、欧洲、新加坡、加拿大、韩国、美国、香港等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-04-11">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-4-11-node-share-links.htm" title="VPN网关 | 4月11日21.2M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/6e0666170b743f277ea390817dbb58e7.webp" alt="VPN网关 | 4月11日21.2M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-4-11-node-share-links.htm" title="VPN网关 | 4月11日21.2M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 4月11日21.2M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了美国、韩国、新加坡、欧洲、加拿大、香港、日本等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-04-10">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-4-10-free-node-subscribe.htm" title="VPN网关 | 4月10日21.2M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/1efe5cff0e659c7211e5b8f615d11cd4.webp" alt="VPN网关 | 4月10日21.2M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-4-10-free-node-subscribe.htm" title="VPN网关 | 4月10日21.2M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 4月10日21.2M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了日本、欧洲、新加坡、韩国、美国、加拿大、香港等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-04-09">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-4-9-node-share-links.htm" title="VPN网关 | 4月9日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/240acf4cb1f90a15ae20c0c70b7a6e2f.webp" alt="VPN网关 | 4月9日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-4-9-node-share-links.htm" title="VPN网关 | 4月9日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 4月9日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了美国、加拿大、香港、新加坡、欧洲、日本、韩国等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
                                         
                     <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                </div>
                 <div class="col-md-3">
@@ -271,16 +272,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-28-free-high-speed-nodes.htm" title="VPN网关 | 3月28日20.5M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点">VPN网关 | 3月28日20.5M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-15-free-node-subscribe.htm" title="VPN网关 | 4月15日20.3M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点">VPN网关 | 4月15日20.3M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-92572.htm" title="卖猫的市场（卖猫的市场视频）">卖猫的市场（卖猫的市场视频）</a></li>
-                        <li class="py-2"><a href="/news/article-76900.htm" title="宠物粮食专卖店在哪里进货（宠物粮食专卖店在哪里进货好）">宠物粮食专卖店在哪里进货（宠物粮食专卖店在哪里进货好）</a></li>
-                        <li class="py-2"><a href="/news/article-88144.htm" title="webpack 执行npm run 时，因为版本依赖报的那些错">webpack 执行npm run 时，因为版本依赖报的那些错</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-18-free-node-subscribe.htm" title="VPN网关 | 3月18日19.9M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点">VPN网关 | 3月18日19.9M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-74202.htm" title="PYQT5(13)-基本窗口控件-拖曳与剪贴板">PYQT5(13)-基本窗口控件-拖曳与剪贴板</a></li>
-                        <li class="py-2"><a href="/news/article-90367.htm" title="济南宠物狗免费赠送活动（济南宠物狗免费赠送活动是真的吗）">济南宠物狗免费赠送活动（济南宠物狗免费赠送活动是真的吗）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-24-free-high-speed-nodes.htm" title="VPN网关 | 3月24日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket订阅节点">VPN网关 | 3月24日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-19-free-subscribe-node.htm" title="VPN网关 | 3月19日22.7M/S|免费V2ray/SSR/Shadowrocket/Clash订阅节点">VPN网关 | 3月19日22.7M/S|免费V2ray/SSR/Shadowrocket/Clash订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-79646.htm" title="宠物之家托运怎么收费（宠物托运咨询哪里）">宠物之家托运怎么收费（宠物托运咨询哪里）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-16-free-subscribe-node.htm" title="VPN网关 | 4月16日18.8M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点">VPN网关 | 4月16日18.8M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-89596.htm" title="spring boot@EnableXXXX注解编程模型分析">spring boot@EnableXXXX注解编程模型分析</a></li>
+                        <li class="py-2"><a href="/news/article-86702.htm" title="动物医院主管部门是谁负责（动物医院监管部门）">动物医院主管部门是谁负责（动物医院监管部门）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-20-free-subscribe-node.htm" title="VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点">VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-75559.htm" title="给动物打疫苗在哪里打（动物打疫苗在哪里打多少钱）">给动物打疫苗在哪里打（动物打疫苗在哪里打多少钱）</a></li>
                         <li class="py-2"><a href="/news/article-91856.htm" title="RestTemplate连接https，证书匹配失败">RestTemplate连接https，证书匹配失败</a></li>
-                        <li class="py-2"><a href="/news/article-78942.htm" title="Zookeeper 基本概念">Zookeeper 基本概念</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-13-clash-v2ray-ss-ssr.htm" title="VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</a></li>
                     </ul>
     </div>
 </div>
@@ -292,7 +293,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">55</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">66</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
