--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -32,6 +32,7 @@
 	<link rel="stylesheet" href="/assets/website/css/clashnodesfree/jquery.mCustomScrollbar.min.css">
 	<!-- Tweaks for older IEs-->
 	<link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
+	<link rel="stylesheet" href="/assets/website/css/G.css" />
 	<!-- fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;800&family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
 
@@ -112,6 +113,51 @@
             </div>
             <div class="row">
                 <div class="col-md-9 xcblog-blog-list">
+                                        <div class="row item xcblog-blog-item" data-date="2025-04-11">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-4-11-node-share-links.htm" title="VPN网关 | 4月11日21.2M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/6e0666170b743f277ea390817dbb58e7.webp" alt="VPN网关 | 4月11日21.2M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-4-11-node-share-links.htm" title="VPN网关 | 4月11日21.2M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 4月11日21.2M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了美国、韩国、新加坡、欧洲、加拿大、香港、日本等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-04-10">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-4-10-free-node-subscribe.htm" title="VPN网关 | 4月10日21.2M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/1efe5cff0e659c7211e5b8f615d11cd4.webp" alt="VPN网关 | 4月10日21.2M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-4-10-free-node-subscribe.htm" title="VPN网关 | 4月10日21.2M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 4月10日21.2M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了日本、欧洲、新加坡、韩国、美国、加拿大、香港等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-04-09">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-4-9-node-share-links.htm" title="VPN网关 | 4月9日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/240acf4cb1f90a15ae20c0c70b7a6e2f.webp" alt="VPN网关 | 4月9日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-4-9-node-share-links.htm" title="VPN网关 | 4月9日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 4月9日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了美国、加拿大、香港、新加坡、欧洲、日本、韩国等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
                                         <div class="row item xcblog-blog-item" data-date="2025-04-08">
                         <div class="col-md-3">
                             <div class="about_img">
@@ -217,51 +263,6 @@
                             <p class="about_text">这一次的节点更新覆盖了香港、日本、新加坡、加拿大、韩国、美国、欧洲等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-31">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-31-free-high-speed-nodes.htm" title="VPN网关 | 3月31日20M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/2c41239ac39028609af4b6e4c787f732.webp" alt="VPN网关 | 3月31日20M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-31-free-high-speed-nodes.htm" title="VPN网关 | 3月31日20M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月31日20M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了日本、美国、加拿大、韩国、香港、新加坡、欧洲等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-30">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-30-free-node-subscribe.htm" title="VPN网关 | 3月30日22.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/c8ff7aedac806fecb30cb33ee55b8cc1.webp" alt="VPN网关 | 3月30日22.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-30-free-node-subscribe.htm" title="VPN网关 | 3月30日22.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月30日22.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了香港、韩国、美国、日本、加拿大、欧洲、新加坡等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-29">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-29-free-node-subscribe.htm" title="VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/35cd59f6c9e33127c228b8be79274267.webp" alt="VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-29-free-node-subscribe.htm" title="VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了韩国、日本、香港、加拿大、新加坡、欧洲、美国等地区,最高速度可达20.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
                                         
                     <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>                </div>
                 <div class="col-md-3">
@@ -271,16 +272,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-94278.htm" title="我被猫咬了一下25天了没打针但心跳加速正常吗（被猫咬后心跳加速）">我被猫咬了一下25天了没打针但心跳加速正常吗（被猫咬后心跳加速）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-30-free-node-subscribe.htm" title="VPN网关 | 3月30日22.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点">VPN网关 | 3月30日22.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-88145.htm" title="致美丽的你 电视剧（致美丽的你 电视剧在线观看）">致美丽的你 电视剧（致美丽的你 电视剧在线观看）</a></li>
-                        <li class="py-2"><a href="/news/article-98479.htm" title="动物医院实践心得5000字左右作文三年级下册（动物医院实训总结）">动物医院实践心得5000字左右作文三年级下册（动物医院实训总结）</a></li>
-                        <li class="py-2"><a href="/news/article-96342.htm" title="小猫养多久才知道自己的名字了（幼猫养多久能知道主人叫它）">小猫养多久才知道自己的名字了（幼猫养多久能知道主人叫它）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-7-free-high-speed-nodes.htm" title="VPN网关 | 4月7日22.4M/S|免费Shadowrocket/SSR/V2ray/Clash订阅节点">VPN网关 | 4月7日22.4M/S|免费Shadowrocket/SSR/V2ray/Clash订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-94853.htm" title="动物疫苗的作用原理和方法图片 动物疫苗的作用原理和方法图片大全">动物疫苗的作用原理和方法图片 动物疫苗的作用原理和方法图片大全</a></li>
-                        <li class="py-2"><a href="/news/article-78291.htm" title="Apache Tomcat如何高并发处理请求">Apache Tomcat如何高并发处理请求</a></li>
-                        <li class="py-2"><a href="/news/article-90363.htm" title="宠物粮品牌排行前十（宠物粮食品牌排名）">宠物粮品牌排行前十（宠物粮食品牌排名）</a></li>
-                        <li class="py-2"><a href="/news/article-71558.htm" title="宠物粮代理怎么拿（宠物粮代理加盟）">宠物粮代理怎么拿（宠物粮代理加盟）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-23-free-node-subscribe-links.htm" title="VPN网关 | 3月23日21.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点">VPN网关 | 3月23日21.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-102213.htm" title="成人自考兽医专业本科（成人自考兽医学）">成人自考兽医专业本科（成人自考兽医学）</a></li>
+                        <li class="py-2"><a href="/news/article-83124.htm" title="深圳宠物领养中心电话地址 深圳宠物领养中心电话地址查询">深圳宠物领养中心电话地址 深圳宠物领养中心电话地址查询</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-12-free-node-subscribe-links.htm" title="VPN网关 | 3月12日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点">VPN网关 | 3月12日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-70891.htm" title="动物医院诊疗许可证办理流程图片大全视频（动物医院诊疗程序）">动物医院诊疗许可证办理流程图片大全视频（动物医院诊疗程序）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-13-clash-v2ray-ss-ssr.htm" title="VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-100048.htm" title="探索 SocketChannel 的核心原理">探索 SocketChannel 的核心原理</a></li>
+                        <li class="py-2"><a href="/news/article-77586.htm" title="宠物狗批发网站大全（宠物狗批发价格）">宠物狗批发网站大全（宠物狗批发价格）</a></li>
+                        <li class="py-2"><a href="/news/article-79646.htm" title="宠物之家托运怎么收费（宠物托运咨询哪里）">宠物之家托运怎么收费（宠物托运咨询哪里）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-14-free-high-speed-nodes.htm" title="VPN网关 | 4月14日21.1M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点">VPN网关 | 4月14日21.1M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点</a></li>
                     </ul>
     </div>
 </div>
@@ -292,7 +293,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">55</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">66</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
