--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -35,6 +35,7 @@
 	<link rel="stylesheet" href="/assets/website/css/clashnodesfree/jquery.mCustomScrollbar.min.css">
 	<!-- Tweaks for older IEs-->
 	<link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
+	<link rel="stylesheet" href="/assets/website/css/G.css" />
 	<!-- fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;800&family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
 
@@ -481,7 +482,7 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="http://xianyuwangluo.top/#/register?code=" data-type="Xianyu" data-code="j5kX2iZI" target="_blank"><b>闲鱼网络</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://xianyuwangluo.top/#/register?code=" data-type="Xianyu" data-code="j5kX2iZI" target="_blank"><b>闲鱼网络</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -530,7 +531,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="http://xianyuwangluo.top/#/register?code=" data-type="Xianyu" data-code="j5kX2iZI" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://xianyuwangluo.top/#/register?code=" data-type="Xianyu" data-code="j5kX2iZI" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -542,16 +543,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-81710.htm" title="动物疫苗gmp认证（动物疫苗gmp认证查询）">动物疫苗gmp认证（动物疫苗gmp认证查询）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-11-node-share-links.htm" title="VPN网关 | 4月11日21.2M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点">VPN网关 | 4月11日21.2M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-99273.htm" title="美容美体包括什么项目（美容美体包括什么项目好学吗）">美容美体包括什么项目（美容美体包括什么项目好学吗）</a></li>
-                        <li class="py-2"><a href="/news/article-85992.htm" title="动物疫苗法律法规有哪些要求 动物疫苗法律法规有哪些要求呢">动物疫苗法律法规有哪些要求 动物疫苗法律法规有哪些要求呢</a></li>
+                        <li class="py-2"><a href="/news/article-70258.htm" title="动物疫苗接种方法及注意事项有哪些 动物疫苗接种方法及注意事项有哪些呢">动物疫苗接种方法及注意事项有哪些 动物疫苗接种方法及注意事项有哪些呢</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-28-free-high-speed-nodes.htm" title="VPN网关 | 3月28日20.5M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点">VPN网关 | 3月28日20.5M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-83124.htm" title="深圳宠物领养中心电话地址 深圳宠物领养中心电话地址查询">深圳宠物领养中心电话地址 深圳宠物领养中心电话地址查询</a></li>
+                        <li class="py-2"><a href="/news/article-80314.htm" title="ruby 版本管理RVM （ruby version manager）">ruby 版本管理RVM （ruby version manager）</a></li>
+                        <li class="py-2"><a href="/news/article-93325.htm" title="动物疫苗的发展现状和趋势论文（动物疫苗行业分析）">动物疫苗的发展现状和趋势论文（动物疫苗行业分析）</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-4-13-free-subscribe-node.htm" title="VPN网关 | 4月13日19.3M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点">VPN网关 | 4月13日19.3M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-3-31-free-high-speed-nodes.htm" title="VPN网关 | 3月31日20M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点">VPN网关 | 3月31日20M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-76899.htm" title="动物疫苗是什么单位负责的 动物疫苗是什么单位负责的呢">动物疫苗是什么单位负责的 动物疫苗是什么单位负责的呢</a></li>
-                        <li class="py-2"><a href="/news/article-71559.htm" title="动物疫苗间隔时间多久打一次好（动物疫苗的使用方法及注意事项）">动物疫苗间隔时间多久打一次好（动物疫苗的使用方法及注意事项）</a></li>
-                        <li class="py-2"><a href="/news/article-84552.htm" title="RabbitMQ数据同步一致性解决方案">RabbitMQ数据同步一致性解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-83124.htm" title="深圳宠物领养中心电话地址 深圳宠物领养中心电话地址查询">深圳宠物领养中心电话地址 深圳宠物领养中心电话地址查询</a></li>
+                        <li class="py-2"><a href="/news/article-81711.htm" title="中国农业大学动物医院怎么挂号（中国农业大学动物医院挂号费）">中国农业大学动物医院怎么挂号（中国农业大学动物医院挂号费）</a></li>
+                        <li class="py-2"><a href="/news/article-90367.htm" title="济南宠物狗免费赠送活动（济南宠物狗免费赠送活动是真的吗）">济南宠物狗免费赠送活动（济南宠物狗免费赠送活动是真的吗）</a></li>
+                        <li class="py-2"><a href="/news/article-83125.htm" title="动物防疫站周六周日上班吗（动物疫病预防控制中心周末上班吗）">动物防疫站周六周日上班吗（动物疫病预防控制中心周末上班吗）</a></li>
                     </ul>
     </div>
 </div>
@@ -563,7 +564,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">55</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">66</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
