--- a/privacy.htm
+++ b/privacy.htm
@@ -35,6 +35,7 @@
 	<link rel="stylesheet" href="/assets/website/css/clashnodesfree/jquery.mCustomScrollbar.min.css">
 	<!-- Tweaks for older IEs-->
 	<link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
+	<link rel="stylesheet" href="/assets/website/css/G.css" />
 	<!-- fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;800&family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
 
@@ -165,16 +166,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-13-clash-v2ray-ss-ssr.htm" title="VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-71559.htm" title="动物疫苗间隔时间多久打一次好（动物疫苗的使用方法及注意事项）">动物疫苗间隔时间多久打一次好（动物疫苗的使用方法及注意事项）</a></li>
-                        <li class="py-2"><a href="/news/article-69975.htm" title="济南宠物领养群（济南领养动物）">济南宠物领养群（济南领养动物）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-19-free-subscribe-node.htm" title="VPN网关 | 3月19日22.7M/S|免费V2ray/SSR/Shadowrocket/Clash订阅节点">VPN网关 | 3月19日22.7M/S|免费V2ray/SSR/Shadowrocket/Clash订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-97806.htm" title="给动物医院的好评模板（动物医院好评语）">给动物医院的好评模板（动物医院好评语）</a></li>
-                        <li class="py-2"><a href="/news/article-85992.htm" title="动物疫苗法律法规有哪些要求 动物疫苗法律法规有哪些要求呢">动物疫苗法律法规有哪些要求 动物疫苗法律法规有哪些要求呢</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-14-free-v2ray.htm" title="VPN网关 | 3月14日18.3M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">VPN网关 | 3月14日18.3M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-84552.htm" title="RabbitMQ数据同步一致性解决方案">RabbitMQ数据同步一致性解决方案</a></li>
                         <li class="py-2"><a href="/news/article-79646.htm" title="宠物之家托运怎么收费（宠物托运咨询哪里）">宠物之家托运怎么收费（宠物托运咨询哪里）</a></li>
-                        <li class="py-2"><a href="/news/article-76221.htm" title="免费领养狗狗正规网站平台有哪些好 免费领养狗狗正规网站平台有哪些好的">免费领养狗狗正规网站平台有哪些好 免费领养狗狗正规网站平台有哪些好的</a></li>
+                        <li class="py-2"><a href="/news/article-98479.htm" title="动物医院实践心得5000字左右作文三年级下册（动物医院实训总结）">动物医院实践心得5000字左右作文三年级下册（动物医院实训总结）</a></li>
+                        <li class="py-2"><a href="/news/article-85992.htm" title="动物疫苗法律法规有哪些要求 动物疫苗法律法规有哪些要求呢">动物疫苗法律法规有哪些要求 动物疫苗法律法规有哪些要求呢</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-11-node-share-links.htm" title="VPN网关 | 3月11日18.2M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点">VPN网关 | 3月11日18.2M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-91856.htm" title="RestTemplate连接https，证书匹配失败">RestTemplate连接https，证书匹配失败</a></li>
+                        <li class="py-2"><a href="/news/article-70258.htm" title="动物疫苗接种方法及注意事项有哪些 动物疫苗接种方法及注意事项有哪些呢">动物疫苗接种方法及注意事项有哪些 动物疫苗接种方法及注意事项有哪些呢</a></li>
+                        <li class="py-2"><a href="/news/article-70259.htm" title="中国餐桌上的四大下酒菜是什么?（怎么可以错过）中华四大下酒菜，红高粱剧情，食功夫之美食大冒险，">中国餐桌上的四大下酒菜是什么?（怎么可以错过）中华四大下酒菜，红高粱剧情，食功夫之美食大冒险，</a></li>
+                        <li class="py-2"><a href="/news/article-80315.htm" title="机器学习系列：LightGBM 可视化调参">机器学习系列：LightGBM 可视化调参</a></li>
+                        <li class="py-2"><a href="/news/article-89597.htm" title="Amazing巧用 CSS 视差实现酷炫交互动效详解">Amazing巧用 CSS 视差实现酷炫交互动效详解</a></li>
+                        <li class="py-2"><a href="/news/article-81046.htm" title="宠爱国际宠物医院官网 宠物医院十大品牌加盟">宠爱国际宠物医院官网 宠物医院十大品牌加盟</a></li>
                     </ul>
     </div>
 </div>
@@ -186,7 +187,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">55</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">66</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
